Chat Redesign: add a fixed height to the 'xowiki-chat-messages-and-form' element on small widths, to make room for the user list and the input field.

--- a/www/resources/chat.css
+++ b/www/resources/chat.css
@@ -216,6 +216,7 @@
     #xowiki-chat-messages-and-form {
         width: 100%;
         order: 2;
+        height: 80%;
         flex: 1 1 auto;
     }
 }
